Small updates from Henry.

--- a/slides/webid/index.xhtml
+++ b/slides/webid/index.xhtml
@@ -193,8 +193,8 @@
 
     <li>Advantages <ul>
       <li>Usability: No password or URL to remember, no need to repeatedly enter friends and contacts, potential for browser-integration, very high security (TLS)</li>
-      <li>Technical: RESTful authentication, peer-to-peer identity, simplified identification protocol, supports digital signatures (X509), supports strong encryption of messages (TLS), extensibility via Linked Data (RDF, RDFa), syntax agnostic (easy to integrate w/ Portable Contacts, etc.)</li></ul></li>
-    <li>Disadvantages: <a href="http://code.google.com/p/chromium/issues/detail?id=29784">Inability to log out</a>, user-interfaces, uniform UI across all browsers, does not work on old devices (cellphones)</li>
+      <li>Technical: wide support in desktop browsers, RESTful authentication, peer-to-peer identity, simplified identification protocol, supports digital signatures (X509), supports strong encryption of messages (TLS), extensibility via Linked Data (RDF, RDFa), syntax agnostic (easy to integrate w/ Portable Contacts, etc.)</li></ul></li>
+    <li>Disadvantages: <a href="http://code.google.com/p/chromium/issues/detail?id=29784">Inability to log out</a>, user-interfaces, uniform UI across all browsers, does not work on older cellphones - patchy support on newer ones</li>
 
   </ul>
   
