Removed W3C logo from WebID slides.

--- a/slides/webid/index.xhtml
+++ b/slides/webid/index.xhtml
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"> 
 
 <head> 
-  <title>Identity, Discovery and Authorization at W3C</title> 
+  <title>Identity and Discovery on the Web</title> 
   <meta name="copyright" 
    content="Copyright &#169; 2010 Digital Bazaar, Inc. Available under Creative Commons Attribution Share-Alike 3.0" /> 
   <link rel="stylesheet" type="text/css" media="screen, projection, print" 
@@ -21,7 +21,7 @@
 </div>
 
 <div class="slide cover"> 
- <h1>Identity, Discovery and Authorization at W3C</h1> 
+ <h1>Identity and Discovery on the Web</h1> 
  <div style="text-align: center;">
   <img style="width: 25%;" src="../../images/openid.png" 
    alt="" class="cover" />
