Added links to presentation.

--- a/slides/rdfa-intro/index.xhtml
+++ b/slides/rdfa-intro/index.xhtml
@@ -125,11 +125,13 @@
   <h1>Learn More about Linked Data</h1>
 
   <ul style="font-size: 75%;">
-    <li>RDF</li>
-    <li>RDFa</li>
-    <li>The RDFa API</li>
-    <li>Microformats</li>
-    <li>Microdata</li>
+    <li><a href="http://www.youtube.com/watch?v=OGg8A2zfWKg">An Intro to the Semantic Web</a> - Brief video introduction to the Semantic Web</li>
+    <li><a href="http://www.w3.org/RDF/">RDF</a> - The Resource Description Framework</li>
+    <li><a href="http://www.youtube.com/watch?v=ldl0m-5zLz4">An Intro to RDFa</a> - Brief video introduction to RDFa</li>
+    <li><a href="http://rdfa.info/wiki/">RDFa</a> - The Resource Description Framework in attributes</li>
+    <li><a href="http://www.w3.org/TR/rdfa-api/">The RDFa API</a> - Accessing Linked Data in Web pages using Javascript</li>
+    <li><a href="http://microformats.org/about">Microformats</a> - An alternative, more loosely-typed, less extensible semantic data markup mechanism</li>
+    <li><a href="http://diveintohtml5.org/extensibility.html">Microdata</a> - The second incarnation of Microformats for HTML5</li>
   </ul>
 </div>
 
