Removed PaySwarm video until copyright has been cleared for W3C picture.

--- a/index.xhtml
+++ b/index.xhtml
@@ -131,6 +131,7 @@ The following video explains why just supporting the people you want to
 support and making money on the web is so difficult. It outlines how PaySwarm can
 help build a better Web for all of us.</p>
 
+<!--
 <div class="center">
 <object width="860" height="510">
 <param name="movie" value="http://www.youtube.com/v/gYdXZ3-U-oQ&#38;ap=%2526fmt%3D22" />
@@ -138,6 +139,8 @@ help build a better Web for all of us.</p>
 <param value="true" name="allowFullScreen" /><embed width="860" height="510" wmode="window" allowfullscreen="true" type="application/x-shockwave-flash" src="http://www.youtube.com/v/gYdXZ3-U-oQ&#38;ap=%2526fmt%3D22"></embed>
 </object>
 </div>
+-->
+<p>PaySwarm video coming soon...</p>
 
     </div>
   </div>
