Fixed link to AU Creative Commons license.

--- a/index.xhtml
+++ b/index.xhtml
@@ -273,7 +273,7 @@ defines a mechanism and vocabulary for software agents that may be used to autom
 <div class="container vspacing"> 
   <div class="row"> 
     <div class="threecol"> 
-      <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/au/"><img alt="Creative Commons License" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a> 
+      <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/"><img alt="Creative Commons License" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a> 
     </div> 
     <div class="ninecol last"> 
       <p>&copy; 2010 Digital Bazaar, Inc. 
