Provided lower-quality video for site.

--- a/index.xhtml
+++ b/index.xhtml
@@ -132,11 +132,16 @@ support and making money on the web is so difficult. It outlines how PaySwarm ca
 help build a better Web for all of us.</p>
 
 <div class="center">
+
+<object width="640" height="385"><param name="movie" value="http://www.youtube.com/v/gYdXZ3-U-oQ?fs=1&amp;hl=en_US"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/gYdXZ3-U-oQ?fs=1&amp;hl=en_US" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="640" height="385"></embed></object>
+
+<!--
 <object width="860" height="510">
-<param name="movie" value="http://www.youtube.com/v/gYdXZ3-U-oQ&#38;ap=%2526fmt%3D22" />
+<param name="movie" value="http://www.youtube.com/v/gYdXZ3-U-oQ&#38;fmt=6" />
 <param value="window" name="wmode" />
-<param value="true" name="allowFullScreen" /><embed width="860" height="510" wmode="window" allowfullscreen="true" type="application/x-shockwave-flash" src="http://www.youtube.com/v/gYdXZ3-U-oQ&#38;ap=%2526fmt%3D22"></embed>
+<param value="true" name="allowFullScreen" /><embed width="860" height="510" wmode="window" allowfullscreen="true" type="application/x-shockwave-flash" src="http://www.youtube.com/v/gYdXZ3-U-oQ&#38;fmt=6"></embed>
 </object>
+-->
 </div>
 
     </div>
