--- a/specs/source/use-cases/index.html
+++ b/specs/source/use-cases/index.html
@@ -8,7 +8,7 @@
       For the three scripts below, if your spec resides on dev.w3 you can check them
       out in the same tree and use relative links so that they'll work offline,
      --> 
-    <script src='../../../dev.w3.org/2009/dap/ReSpec.js/js/respec.js' class='remove'></script> 
+    <script src='../../respec/js/respec.js' class='remove'></script> 
     <script class='remove'> 
       var respecConfig = {
           // specification status (e.g. WD, LCWD, NOTE, etc.). If in doubt use ED.
@@ -33,7 +33,7 @@
  
           // if you want to have extra CSS, append them to this list
           // it is recommended that the respec.css stylesheet be kept
-          extraCSS:             ["http://dev.w3.org/2009/dap/ReSpec.js/css/respec.css"],
+          extraCSS:             ["../../respec/css/respec.css"],
  
           // editors, add as many as you like
           // only "name" is required
