Added Commerce and PaySwarm vocabularies, spec index.xhtml file.

--- a/specs/payswarm-use-cases.html
+++ b/specs/payswarm-use-cases.html
@@ -10,7 +10,7 @@
      --> 
      
      
-  <link href="http://dev.w3.org/2009/dap/ReSpec.js/css/respec.css" rel="stylesheet" type="text/css" charset="utf-8"><link href="http://www.w3.org/StyleSheets/TR/w3c-unofficial" rel="stylesheet" type="text/css" charset="utf-8"></head><body style="display: inherit; "><div class="head"><p></p><h1 class="title" id="title">PaySwarm - Use Cases</h1><h2 id="unofficial-draft-23-march-2010">Unofficial Draft 23 March 2010</h2><dl><dt>Editor:</dt><dd><a href="http://digitalbazaar.com/">Manu Sporny</a>, <a href="http://digitalbazaar.com/">Digital Bazaar, Inc.</a></dd></dl><p class="copyright">Copyright 2009-2010 © Digital Bazaar, Inc.</p><hr></div> 
+  <link href="http://dev.w3.org/2009/dap/ReSpec.js/css/respec.css" rel="stylesheet" type="text/css" charset="utf-8"><link href="http://www.w3.org/StyleSheets/TR/w3c-unofficial" rel="stylesheet" type="text/css" charset="utf-8"></head><body style="display: inherit; "><div class="head"><p></p><h1 class="title" id="title">PaySwarm - Use Cases</h1><h2 id="unofficial-draft-23-march-2010">Unofficial Draft 23 March 2010</h2><dl><dt>Editor:</dt><dd><a href="http://digitalbazaar.com/">Manu Sporny</a>, <a href="http://digitalbazaar.com/">Digital Bazaar, Inc.</a></dd></dl><p class="copyright">Copyright 2009-2010 &copy; Digital Bazaar, Inc.</p><hr></div> 
     <div id="abstract" class="introductory section"><h2 id="abstract-1">Abstract</h2> 
       <p> 
 The PaySwarm web platform is an open standard that enables web browsers and web 
