--- a/specs/source/vocabs/payswarm.html
+++ b/specs/source/vocabs/payswarm.html
@@ -84,14 +84,118 @@
 
     <section>
       <h2>Classes</h2>
-      <p>
-      </p>
+ ps:Asset
+ ps:AssetSignature
+-ps:Authority
+-ps:BuyerSignature
+ ps:Contract
++ps:ContractSignature
+ ps:Deposit => com:Deposit
+ ps:DepositSignature
+-ps:File
+-ps:Identity
+-ps:License
+-ps:LicenseSignature
+-ps:Listing
+-ps:NoAdditionalPayees
++ps:ListingSignature
+ ps:Payee
+-ps:Role
+-ps:SellerSignature
+-ps:Signature
+-ps:SignatureType
+-ps:StandardSignature
+ ps:Transaction
+ ps:Transfer
+-ps:ValidFrom
+-ps:ValidThrough
+-ps:WebPage
+ ps:Withdrawal
+
     </section>
 
     <section>
       <h2>Properties</h2>
-      <p>
-      </p>
+ ps:account
+-ps:accountId
+-ps:allowCustomPools
+-ps:amount
+-ps:amountResolved
+-ps:amountType
++ps:actor
+ ps:asset
+ ps:assetAcquirer
+ ps:assetHash
+ ps:assetProvider
+ ps:authority
+-ps:buyer
+-ps:buyerId
+-ps:collectionId
+-ps:collections
+ ps:contentHash
+-ps:contentUrl
+-ps:cover
+-ps:delegateId
+ ps:deleted
+ ps:disabled
+-ps:distribution
+-ps:expiration
+ ps:forAsset
+-ps:forMediaId
+ ps:forTransaction
+-ps:gid
+ ps:grant
+-ps:grantTemplate
+-ps:grantTerms
+-ps:groupId
+ ps:identityHash
+ ps:identitySalt
+ ps:ipv
+ ps:license
+-ps:licenseAmount
+ ps:licenseHash
+-ps:licenseProvider
+-ps:licenseTerms
+-ps:licenseText
+-ps:limitation
++ps:licenseUrl
+ ps:listing
+-ps:mimeType
+-ps:min
+-ps:notValidAfter
+-ps:notValidBefore
++ps:listingHash
+ ps:owner
+-ps:ownerId
+ ps:payee
+-ps:payeeRule
+-ps:payeeRules
+-ps:payees
+-ps:percentage
+-ps:permission
++ps:payeePosition
+ ps:privatePayees
+-ps:profileId
+-ps:prose
+-ps:rightsHolder
+-ps:role
+-ps:roleId
+-ps:seller
+ ps:signature
+-ps:signatureAlgorithm
+ ps:signatureFor
+-ps:signatureHashAlgorithm
+-ps:signatureSerializationAlgorithm
+ ps:signatureValue
++ps:signedFor
+ ps:signer
+-ps:taxExempt
+-ps:transactionDate
+-ps:transfer
+-ps:userId
+-ps:validFrom
+-ps:validThrough
+
     </section>
 
   </body> 
